k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-amazonas-pires
  labels:
    app: hospital-amazonas-pires
    version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hospital-amazonas-pires
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hospital-amazonas-pires
    spec:
      containers:
        - name: hospital-amazonas-pires
          image: nelsonstudent/hospital-amazonas-pires:latest  # tag injetada pelo Kustomize
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - hospital-amazonas-pires
                topologyKey: kubernetes.io/hostname
