k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-amazonas-pires
  labels:
    app: hospital-amazonas-pires
spec:
  type: ClusterIP
  selector:
    app: hospital-amazonas-pires
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
