k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-amazonas-pires
  labels:
    app: hospital-amazonas-pires
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: hospital-amazonas-pires.local    # sobrescrito por cada overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-amazonas-pires
                port:
                  number: 80
